type check tests

--- a/.github/workflows/type-checking.yml
+++ b/.github/workflows/type-checking.yml
@@ -28,5 +28,5 @@ jobs:
     - name: Analyze code with mypy
 
       run: |
-        mypy ./src --ignore-missing-imports
+        mypy ./src ./tests --ignore-missing-imports
 
